# rust_kahoot

./: README.md
kahoot/: .gitignore  Cargo.toml  LICENSE_MIT
kahoot/src/: lib.rs
kahoot/src/components/: chat.rs  login.rs
kahoot/src/services/: websocket.rs
kahoot/static/: index.html
server/: Cargo.toml
server/src/: main.rs  server.rs  session.rs
