[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
rand = "0.8.4"
getrandom = "0.2"
tokio = { version = "1.19.2", features = ["full"] }
log = "0.4.0"
env_logger = "0.9.0"
actix-session = "0.5"
tungstenite = "0.17.2"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"
actix = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web-lab = "0.16.1"





[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]
